--- a/composer.json
+++ b/composer.json
@@ -12,9 +12,13 @@
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
+        "predis/predis": "^2.2",
+        "spatie/laravel-permission": "^6.9",
+        "spatie/laravel-translatable": "^6.8",
         "tightenco/ziggy": "^2.0"
     },
     "require-dev": {
+        "barryvdh/laravel-ide-helper": "^3.1",
         "fakerphp/faker": "^1.9.1",
         "laravel/pint": "^1.0",
         "laravel/sail": "^1.18",
@@ -28,7 +32,10 @@
             "App\\": "app/",
             "Database\\Factories\\": "database/factories/",
             "Database\\Seeders\\": "database/seeders/"
-        }
+        },
+        "files": [
+        "app/Http/helpers.php"
+        ]
     },
     "autoload-dev": {
         "psr-4": {
