--- a/package.json
+++ b/package.json
@@ -3,18 +3,27 @@
     "type": "module",
     "scripts": {
         "dev": "vite",
-        "build": "vite build"
+        "build": "vite build",
+        "watch": "vite build --watch"
     },
     "devDependencies": {
         "@inertiajs/vue3": "^1.0.0",
         "@tailwindcss/forms": "^0.5.3",
         "@vitejs/plugin-vue": "^5.0.0",
-        "autoprefixer": "^10.4.12",
+        "autoprefixer": "^10.4.20",
         "axios": "^1.6.4",
+        "flowbite": "^2.5.2",
         "laravel-vite-plugin": "^1.0.0",
-        "postcss": "^8.4.31",
-        "tailwindcss": "^3.2.1",
+        "postcss": "^8.4.47",
+        "tailwindcss": "^3.4.14",
         "vite": "^5.0.0",
         "vue": "^3.4.0"
+    },
+    "dependencies": {
+        "@heroicons/vue": "^2.1.5",
+        "@inertiajs/inertia": "^0.11.1",
+        "laravel-vue-i18n": "^2.7.8",
+        "vue-sweetalert2": "^5.0.11",
+        "vue3-loader-image": "^1.1.9"
     }
 }
